fix: fix #textarea autoresize issue on Firefox + outline fix

--- a/packages/dnb-eufemia/src/components/textarea/style/_textarea.scss
+++ b/packages/dnb-eufemia/src/components/textarea/style/_textarea.scss
@@ -15,6 +15,8 @@
   margin: 0;
   padding: 0 var(--textarea-padding-width);
 
+  outline: none;
+
   font-size: var(--font-size-basis);
   line-height: var(--line-height-basis);
 }
